OC2 = OpenCart 2 (OC21, OC22, OC23 = specifieke minor versie binnen major versie 2)
OC3 = OpenCart 3
PS  = PrestaShop
VM3 = VirtueMart3 (Joomla)
WC  = WooCommerce (WordPress) (alle ondersteunde versies, vanaf 5.5.2 is dat alleen nog WC3)
WC2 = WooCommerce 2 (WordPress)
WC3 = WooCommerce 3+ (WordPress)

6.0.4 (2020-10-??)
------------------
Features:
- PS: Added the registration form to PS.

Bugs:
- JOO: Improved styling of forms and added logo to register form.
- ALL: Allow attribute values in class FormRenderer to be defined as an array.

6.0.3 (2020-10-26)
------------------
Features:
- OC: Added the registration form to OC.

Bugs:
- MA: Aanpasbare opties worden niet op de factuur gezet.
- WC: Bundle lines with price info on their children might not get a correct vat
  rate.

6.0.2 (2020-09-03)
------------------
Features:
- ALL: Nature van additionele services bepalen adhv hoofdbestanddeel van de
  factuur.
- JOO: Added the registration form to JOO.

Bugs:
- ALL: The example modules that show how to use the events generated by this
  module were not upgraded wrt some incompatible changes made in 6.0.0. The
  latest versions are now downloadable from the Acumulus forum at:
  https://forum.acumulus.nl/index.php?board=18.0
- JOO: Niet alle module-specifieke vertalingen werden correct geladen.

Refactorings:
- ALL: RegistrationForm => RegisterForm
- ALL: Due to incorporating unit tests to libAcumulus, the copy and hard linking
  process to get install packages and development environments for the various
  supported web shops has been overhauled. No visible changes for users, other
  then that some readme or license files may have been renamed or moved.

6.0.1 (2020-08-06)
------------------
Bugs:
- WC: Buttons op het statusoverzicht werken niet meer (en een button met als
  tekst "button_submit_invoice" verschijnt onderaan het overzicht).

6.0.0 (2020-08-05)
------------------
NOTE: The minimum PHP version requirement is now set to 5.6.
